--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       href="./images/favicon-32x32.png"
     />
 
+    <link rel="stylesheet" href="style.css" />
+
     <title>Frontend Mentor | Clipboard landing page</title>
   </head>
   <body>
@@ -27,8 +29,8 @@
         </p>
       </div>
       <div class="cta-btns">
-        <button class="btn ios-btn">Download for iOS</button>
-        <button class="btn mac-btn">Download for Mac</button>
+        <button class="btn ios-btn">Download for Mac</button>
+        <button class="btn mac-btn">Download for iOS</button>
       </div>
     </header>
 
@@ -67,20 +69,20 @@
     </section>
 
     <section class="description-section-1">
-      <div class="description-1-top">
+      <div class="feature-top description-1-top">
         <h2>Access Clipboard anywhere</h2>
         <p>
           Whether you’re on the go, or at your computer, you can access all your
           Clipboard snippets in a few simple clicks.
         </p>
       </div>
-      <div class="description-1-img">
+      <div class="feature-img description-1-img">
         <img src="images/image-devices.png" alt="device" />
       </div>
     </section>
 
     <section class="description-section-2">
-      <div class="description-2-top">
+      <div class="feature-top description-2-top">
         <h2>Supercharge your workflow</h2>
         <p>We’ve got the tools to boost your productivity.</p>
       </div>
@@ -129,7 +131,7 @@
     </section>
 
     <section class="download">
-      <div class="download-top">
+      <div class="feature-top download-top">
         <h2>Clipboard for iOS and Mac OS</h2>
         <p>
           Available for free on the App Store. Download for Mac or iOS, sync
@@ -171,7 +173,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="https://github.com/md-akram">AKRAM</a>.
       </p>
     </div>
   </body>
